# my-utils-delta-table

./: .gitignore  README.md  pyproject.toml
src/my_utils_delta_table/: __init__.py  delta.py  s3.py
